<resources>
    <string name="app_name">Stranger Things</string>
    <string name="search_button">SEARCH</string>
    <string name="location_button">LOCATIONS</string>
    <string name="flashlight_button">PROXIMITY SENSOR</string>
    <string name="credits">API CREATED BY\nPAIGE GORRY\nKATE DAMERON</string>
    <string name="my_name">YASMIN FRANCISQUETTI</string>

    <string name="name">CHARACTER NAME</string>
    <string name="nickname">NICKNAME</string>
    <string name="status_born">%s, %s</string>
    <string name="gender">GENDER</string>
    <string name="occupation">OCCUPATION</string>
    <string name="residence">RESIDENCE</string>
    <string name="portrayed_by">PORTRAYED BY %s</string>

    <string name="instruction_scroll">SCROLL LEFT TO SEE MORE</string>

    <string name="affiliations">AFFILIATIONS</string>
    <string name="affiliation">AFFILIATION</string>

    <string name="relations">RELATIONS</string>
    <string name="character_name_relation">CHARACTER NAME</string>
    <string name="character_status_born_relation">STATUS, BORN</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="locations">LOCATIONS</string>
    <string name="instruction">CLICK TO BE REDIRECTED!</string>

    <string name="location_name">LOCATION NAME</string>

    <string name="refresh">REFRESH</string>

    <string name="sample">Sample</string>

    <string name="logo">STRANGER THINGS CHARACTER SEARCHER</string>
    <string name="new_stuff">LOCATION AND SENSOR ADAPTED</string>
    <string name="character_image">CHARACTER IMAGE</string>
    <string name="related_image">RELATED IMAGE</string>
    <string name="location_image">LOCATION IMAGE</string>
</resources>