<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splashConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/stranger_black"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/imgvwsplashlogo"
        android:layout_width="290dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/st_applogo" />

    <TextView
        android:id="@+id/textViewCredits"
        style="@style/redText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/credits"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMyName" />

    <TextView
        android:id="@+id/textViewMyName"
        style="@style/redText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgvwsplashlogo" />

    <ImageView
        android:id="@+id/imgvwnewstuff"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/new_stuff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCredits"
        app:srcCompat="@drawable/st_newstuff" />

</androidx.constraintlayout.widget.ConstraintLayout>